<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/page2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scaleX="1"
    tools:context=".SecondActivity"
    tools:ignore="InvalidId">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_in_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/app_name_after"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/Choose_data"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="false"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/Choose_data" />

    <Button
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="315dp"
        android:id="@+id/btnSignout"
        android:text="@string/Sign_out"
        android:textSize="8dp"
        android:background="@drawable/btn_sign_out"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Choose_data"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:weightSum="5">

        <Button
            android:id="@+id/calculateConsumption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_temp1"
            android:text="@string/CalculateConsumption"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnTemp1"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_temp1"
            android:onClick="onClickTemp2"
            android:text="@string/Temp1"
            android:textColor="@color/black"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/btnTemp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_temp2"
            android:onClick="onClickTemp"
            android:text="@string/Temp2"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnHum1"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_hum1"
            android:text="@string/Hum1"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnHum2"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_hum2"
            android:text="@string/Hum2"
            android:textColor="@color/black" />
    </LinearLayout>


</RelativeLayout>