<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rt"
    android:scaleX="1"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity = "center"
        android:orientation="vertical">

        <TextView
            android:textSize="35sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_in_name" />

        <TextView
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_name_after" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="12sp"
        android:textColor="@color/text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/bottom_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_bottom"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        android:weightSum="2">

        <Button
            android:id="@+id/btnLogin"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_log_in"
            android:text="@string/Login_button"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_sign_up"
            android:text="@string/Register_button"
            android:textColor="@color/black" />


    </LinearLayout>
</RelativeLayout>